...

    <TableLayout
        android:id="@+id/leaderboardTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

        <TableRow
            android:id="@+id/Top10Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/Top10Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/HeaderRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/HeaderRank"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/HeaderName"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/HeaderGold"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/FirstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/FirstRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FirstGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/SecondRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/SecondRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/SecondName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/SecondGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/ThirdRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/ThirdRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/ThirdName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/ThirdGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/FourthRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/FourthRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FourthName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FourthGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <TableRow
            android:id="@+id/FifthRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/FifthRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FifthName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/FifthGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
