package com.litschel.kieran.coinz;


import android.content.Context;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.ViewInteraction;
import android.support.test.filters.LargeTest;
import android.support.test.rule.ActivityTestRule;
import android.support.test.rule.GrantPermissionRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

// Tests the leaderboard under expected use

@LargeTest
@RunWith(AndroidJUnit4.class)
public class BasicLeaderboardTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<MainActivity>(MainActivity.class) {
        @Override
        protected void beforeActivityLaunched() {
            Context context = InstrumentationRegistry.getTargetContext();
            TestSetupMethods.resetSettings(context);
            TestSetupMethods.setTester1LoggedIn(context);
            TestSetupMethods.resetTestDB();
            // Setup the first 5 users for the leaderboard
            TestSetupMethods.setupUser("ROtiCeFTuIZ3xNOhEweThG3htXj1", "Alex", new String[][]{
                    new String[]{"GOLD", "10"}
            });
            TestSetupMethods.setupUser("8SpoGV9JFlXKlIiuAXkQ22PB0MF3", "Ben", new String[][]{
                    new String[]{"GOLD", "654646"}
            });
            TestSetupMethods.setupUser("dUfwCZBX2EW1QIHwHkhNZoqOWf52", "Charlie", new String[][]{
                    new String[]{"GOLD", "21523353"}
            });
            TestSetupMethods.setupUser("ceFCMjlFOhXqrAHyuhKwEZGUUHn1", "Daniel", new String[][]{
                    new String[]{"GOLD", "446448"}
            });
            TestSetupMethods.setupUser("7SaETL8QlXUQtgJMaJb9xO5JVAY2", "Ellie", new String[][]{
                    new String[]{"GOLD", "7794"}
            });
            super.beforeActivityLaunched();
        }

        @Override
        protected void afterActivityFinished() {
            Context context = InstrumentationRegistry.getTargetContext();
            TestSetupMethods.resetSettings(context);
            super.afterActivityFinished();
        }
    };

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.ACCESS_FINE_LOCATION");

    @Test
    public void basicLeaderboardTest() {

        try {
            Thread.sleep(7500);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // Navigate to leaderboard fragment

        ViewInteraction appCompatImageButton2 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar),
                                        childAtPosition(
                                                withId(R.id.content_frame),
                                                2)),
                                1),
                        isDisplayed()));
        appCompatImageButton2.perform(click());

        ViewInteraction navigationMenuItemView2 = onView(
                allOf(childAtPosition(
                        allOf(withId(R.id.design_navigation_view),
                                childAtPosition(
                                        withId(R.id.nav_view),
                                        0)),
                        3),
                        isDisplayed()));
        navigationMenuItemView2.perform(click());

        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // Check values are as expected

        ViewInteraction textView = onView(
                allOf(withId(R.id.Top10Text), withText("TOP 5"),
                        childAtPosition(
                                allOf(withId(R.id.Top10Row),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                3)),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("TOP 5")));

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.HeaderRank), withText("RANK"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                0),
                        isDisplayed()));
        textView2.check(matches(withText("RANK")));

        ViewInteraction textView3 = onView(
                allOf(withId(R.id.HeaderName), withText("USERNAME"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                1),
                        isDisplayed()));
        textView3.check(matches(withText("USERNAME")));

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.HeaderGold), withText("GOLD"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                2),
                        isDisplayed()));
        textView4.check(matches(withText("GOLD")));

        ViewInteraction textView5 = onView(
                allOf(withId(R.id.FirstRank), withText("1"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                0),
                        isDisplayed()));
        textView5.check(matches(withText("1")));

        ViewInteraction textView6 = onView(
                allOf(withId(R.id.FirstName), withText("Charlie"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                1),
                        isDisplayed()));
        textView6.check(matches(withText("Charlie")));

        ViewInteraction textView7 = onView(
                allOf(withId(R.id.FirstGold), withText("21.523 M"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                2),
                        isDisplayed()));
        textView7.check(matches(withText("21.523 M")));

        ViewInteraction textView8 = onView(
                allOf(withId(R.id.SecondRank), withText("2"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                0),
                        isDisplayed()));
        textView8.check(matches(withText("2")));

        ViewInteraction textView9 = onView(
                allOf(withId(R.id.SecondName), withText("Ben"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                1),
                        isDisplayed()));
        textView9.check(matches(withText("Ben")));

        ViewInteraction textView10 = onView(
                allOf(withId(R.id.SecondGold), withText("654.646 K"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                2),
                        isDisplayed()));
        textView10.check(matches(withText("654.646 K")));

        ViewInteraction textView11 = onView(
                allOf(withId(R.id.ThirdRank), withText("3"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                0),
                        isDisplayed()));
        textView11.check(matches(withText("3")));

        ViewInteraction textView12 = onView(
                allOf(withId(R.id.ThirdName), withText("Daniel"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                1),
                        isDisplayed()));
        textView12.check(matches(withText("Daniel")));

        ViewInteraction textView13 = onView(
                allOf(withId(R.id.ThirdGold), withText("446.448 K"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                2),
                        isDisplayed()));
        textView13.check(matches(withText("446.448 K")));

        ViewInteraction textView14 = onView(
                allOf(withId(R.id.FourthRank), withText("4"),
                        childAtPosition(
                                allOf(withId(R.id.FourthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                8)),
                                0),
                        isDisplayed()));
        textView14.check(matches(withText("4")));

        ViewInteraction textView15 = onView(
                allOf(withId(R.id.FourthName), withText("Ellie"),
                        childAtPosition(
                                allOf(withId(R.id.FourthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                8)),
                                1),
                        isDisplayed()));
        textView15.check(matches(withText("Ellie")));

        ViewInteraction textView16 = onView(
                allOf(withId(R.id.FourthGold), withText("7.794 K"),
                        childAtPosition(
                                allOf(withId(R.id.FourthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                8)),
                                2),
                        isDisplayed()));
        textView16.check(matches(withText("7.794 K")));

        ViewInteraction textView17 = onView(
                allOf(withId(R.id.FifthRank), withText("5"),
                        childAtPosition(
                                allOf(withId(R.id.FifthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                9)),
                                0),
                        isDisplayed()));
        textView17.check(matches(withText("5")));

        ViewInteraction textView18 = onView(
                allOf(withId(R.id.FifthName), withText("Alex"),
                        childAtPosition(
                                allOf(withId(R.id.FifthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                9)),
                                1),
                        isDisplayed()));
        textView18.check(matches(withText("Alex")));

        ViewInteraction textView19 = onView(
                allOf(withId(R.id.FifthGold), withText("10.000"),
                        childAtPosition(
                                allOf(withId(R.id.FifthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                9)),
                                2),
                        isDisplayed()));
        textView19.check(matches(withText("10.000")));

        // Add users to fill up the leaderboard

        TestSetupMethods.setupUser("VLtSELSe31cLPvNsvF692VyO5Py1", "Fiona", new String[][]{
                new String[]{"GOLD", "465465235289"}
        });
        TestSetupMethods.setupUser("d9X1huNfATNk0tsDM8T8AWLM4qb2", "Georgia", new String[][]{
                new String[]{"GOLD", "4545677"}
        });
        TestSetupMethods.setupUser("nXt3iQm2uOhpwtAPocgd2ii9imi2", "Harriet", new String[][]{
                new String[]{"GOLD", "798465"}
        });
        TestSetupMethods.setupUser("GwNuEg0pEUQvpuaBXiCU5uWip0G2", "India", new String[][]{
                new String[]{"GOLD", "7846548"}
        });
        TestSetupMethods.setupUser("9dAfz9WWB2SWalZdcHmLhjrGdvT2", "James", new String[][]{
                new String[]{"GOLD", "3435486564"}
        });

        // Refresh leaderboard

        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.refreshButton),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.flContent),
                                        0),
                                1),
                        isDisplayed()));
        floatingActionButton.perform(click());

        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // Check values are correct

        ViewInteraction textView21 = onView(
                allOf(withId(R.id.Top10Text), withText("TOP 10"),
                        childAtPosition(
                                allOf(withId(R.id.Top10Row),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                3)),
                                0),
                        isDisplayed()));
        textView21.check(matches(withText("TOP 10")));

        ViewInteraction textView22 = onView(
                allOf(withId(R.id.HeaderRank), withText("RANK"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                0),
                        isDisplayed()));
        textView22.check(matches(withText("RANK")));

        ViewInteraction textView23 = onView(
                allOf(withId(R.id.HeaderName), withText("USERNAME"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                1),
                        isDisplayed()));
        textView23.check(matches(withText("USERNAME")));

        ViewInteraction textView24 = onView(
                allOf(withId(R.id.HeaderGold), withText("GOLD"),
                        childAtPosition(
                                allOf(withId(R.id.HeaderRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                4)),
                                2),
                        isDisplayed()));
        textView24.check(matches(withText("GOLD")));

        ViewInteraction textView25 = onView(
                allOf(withId(R.id.FirstRank), withText("1"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                0),
                        isDisplayed()));
        textView25.check(matches(withText("1")));

        ViewInteraction textView26 = onView(
                allOf(withId(R.id.FirstName), withText("Fiona"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                1),
                        isDisplayed()));
        textView26.check(matches(withText("Fiona")));

        ViewInteraction textView27 = onView(
                allOf(withId(R.id.FirstGold), withText("465.465 B"),
                        childAtPosition(
                                allOf(withId(R.id.FirstRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                5)),
                                2),
                        isDisplayed()));
        textView27.check(matches(withText("465.465 B")));

        ViewInteraction textView28 = onView(
                allOf(withId(R.id.SecondRank), withText("2"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                0),
                        isDisplayed()));
        textView28.check(matches(withText("2")));

        ViewInteraction textView29 = onView(
                allOf(withId(R.id.SecondName), withText("James"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                1),
                        isDisplayed()));
        textView29.check(matches(withText("James")));

        ViewInteraction textView30 = onView(
                allOf(withId(R.id.SecondGold), withText("3.435 B"),
                        childAtPosition(
                                allOf(withId(R.id.SecondRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                6)),
                                2),
                        isDisplayed()));
        textView30.check(matches(withText("3.435 B")));

        ViewInteraction textView31 = onView(
                allOf(withId(R.id.ThirdRank), withText("3"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                0),
                        isDisplayed()));
        textView31.check(matches(withText("3")));

        ViewInteraction textView32 = onView(
                allOf(withId(R.id.ThirdName), withText("Charlie"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                1),
                        isDisplayed()));
        textView32.check(matches(withText("Charlie")));

        ViewInteraction textView33 = onView(
                allOf(withId(R.id.ThirdGold), withText("21.523 M"),
                        childAtPosition(
                                allOf(withId(R.id.ThirdRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                7)),
                                2),
                        isDisplayed()));
        textView33.check(matches(withText("21.523 M")));

        ViewInteraction textView34 = onView(
                allOf(withId(R.id.FourthRank), withText("4"),
                        childAtPosition(
                                allOf(withId(R.id.FourthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                8)),
                                0),
                        isDisplayed()));
        textView34.check(matches(withText("4")));

        ViewInteraction textView35 = onView(
                allOf(withId(R.id.FourthName), withText("India"),
                        childAtPosition(
                                allOf(withId(R.id.FourthRow),
                                        childAtPosition(
                                                withId(R.id.leaderboardTable),
                                                8)),
                                1),
